# src/api/src/routes.ts
@@ -1,6 +1,7 @@
 import { Router, type Router as ExpressRouter } from 'express'
 import { auditLogsRoutes } from '@/modules/audit-logs/audit-logs.routes'
 import { authRoutes } from '@/modules/auth/auth.routes'
+import { favoritesRoutes } from '@/modules/favorites/favorites.routes'
 import { foodTypesRoutes } from '@/modules/food-types/food-types.routes'
 import { menuItemsRoutes } from '@/modules/menu-items/menu-items.routes'
 import { recommendationsRoutes } from '@/modules/recommendations/recommendations.routes'
@@ -23,4 +24,5 @@ routes.use('/api/tastes', tastesRoutes)
 routes.use('/api/restaurants', restaurantsRoutes)
 routes.use('/api/menu-items', menuItemsRoutes)
 routes.use('/api/recommendations', recommendationsRoutes)
+routes.use('/api/favorites', favoritesRoutes)
 routes.use('/api/audit-logs', auditLogsRoutes)
